clang/test/BSC/Negative/SafeZone/unsafe_unary_expr/unsafe_unary_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

int main(void) {
  int a = 0;
  int *b = &a;
  safe {
    ++a;          // ok: ++ on integers is allowed
    --a;          // ok: -- on integers is allowed
    int c = *b;   // expected-error {{'*' operator is forbidden in the safe zone}}
    // Note: [] operator restriction on raw pointers requires ENABLE_BSC_FUTURE
    int d = b[0];
    int x = 0;
    const int *borrow cb = &const x;
    int y = *cb;
    int *borrow mb = &mut x;
    int z = ++*mb; // ok: ++ on dereferenced borrow pointer is allowed
    int w = *mb++; //#1
    int * p = &x; // expected-error {{'&' operator is forbidden in the safe zone}}
  }
  return 0;
}

// expected-error@#1 {{'++' operator is forbidden in the safe zone}}
// expected-error@#1 {{invalid argument type 'int *borrow' to unary expression}}